[vr] Disable repositioning in conflicting modes

For example, when editing you may want to click to dismiss the
keyboard, so we should disable repositioning in that mode to
avoid confusion. Similarly, we shouldn't allow repositioning
while a modal dialog or hosted UI is up.

Bug: 824818, 824822
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I405913b0fae4a6b4dd434dc5e033222bf567006b
Reviewed-on: https://chromium-review.googlesource.com/976522
Reviewed-by: Michael Thiessen <mthiesse@chromium.org>
Commit-Queue: Ian Vollick <vollick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545296}
Former-commit-id: 73faa97d7e31f1e4fadeb02620aefc55d322bd05